# jpeg-compressor

./: CMakeLists.txt  ProjectHome.md  README.md  jpgd.cpp  jpgd.h  jpgd_idct.h  jpge.cbp  jpge.cpp  jpge.h  jpge.sln  jpge.vcproj  jpge.vcxproj  jpge.vcxproj.filters  tga2jpg.cpp
cmake/packaging/: CMakeLists.txt  jpgeConfig.cmake
tags/v101/: stb_image.c
tags/v102/: jpge.cpp
tags/v103/: jpge.cpp
tags/v104/: jpge.vcproj  jpge.workspace
trunk/: jpgd.h  jpge.cpp  jpge.vcproj  tga2jpg.cpp
